Updated imports and methods now exported

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,16 @@
 S3method(plot,Rttest)
 S3method(print,Rttest)
 export(myttest)
+export(plot.Rttest)
+export(print.Rttest)
+importFrom(dplyr,"%>%")
+importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,geom_errorbar)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,guides)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,last_plot)
+importFrom(purrr,map2)
 importFrom(stats,t.test)
 importFrom(stats,var.test)
