--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(print,Rttest)
 export(myttest)
 export(plot.Rttest)
 export(print.Rttest)
+export(shinyboxplots)
 importFrom(dplyr,"%>%")
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_boxplot)
